--- a/Application/.classpath
+++ b/Application/.classpath
@@ -6,6 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/Users/alejandro/Documents/projects/repository/jdatepicker-1.3.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/forte/Documents/eclipse_workspace/git/jdatepicker-1.3.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
